# remin

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
examples/: example_heat_problem.ipynb
examples/2d-trainsient-conduction/: postprocess.py  training.json
examples/2d-trainsient-conduction/data/: linear.py  step.py  unhom.py  uniform.py
examples/2d-trainsient-conduction/models/: 4L32.py  4L64.py  8L32.py
examples/Poiseulle_bns/: channel.geo  channel.msh  poiseulle_model.py  poiseulle_post.py  poiseulle_train.py
examples/channel_bns/: channel.geo  channel.msh  channel_config.py  channel_model.py  channel_post.py  channel_train.py
examples/heat/: model.py  postprocess.py  training.py
examples/heat/outputs/: heat_best_model.pt  heat_best_model_full_batch.pt  heat_final_model_full_batch.pt  (+2 more)
examples/kovasznay_bns/: bnsPlotFields.py  kovasznay.geo  kovasznay.msh  kovasznay_config.py  kovasznay_model.py  kovasznay_post.py  kovasznay_train.py
examples/ldc/: ldc_model.py  ldc_post.py  ldc_train.py
examples/mesh/: README.md  hard_model.py  hard_post.py  hard_train.py  pre_process.py  readmesh.py  soft_model.py  soft_post.py  soft_train.py  square.msh
examples/schrodinger/: functrain.py  model.py  postprocess.py  train.py
examples/taylorGreen_bns/: readmesh.py  taylorGreen.geo  taylorGreen.msh  taylorGreen_config.py  taylorGreen_model.py  taylorGreen_post.py  taylorGreen_train.py
examples/wave/: model.py  postprocess.py  train.py  train_batched.py
src/remin/: __init__.py  callbacks.py  domain.py  func.py  residual.py  solver.py
(+8 files in other folders)
